--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="search">
-    <form class="search-form">
+    <form class="search-form" (submit)="onSearch()">
         <div class="search-input-container">
             <input type="text" class="search-input" [(ngModel)]="searchText" name="searchInput"
                 (input)="onInputChange()" />
@@ -7,6 +7,11 @@
                 <span class="loader-text">Buscar...</span>
             </div>
         </div>
-        <i class="fas fa-search search-icon" (click)="onSearch()"></i>
+        <button *ngIf="loading" class="mr-2">
+            <app-loader></app-loader>
+        </button>
+        <button type="submit" class="search-button">
+            <i class="fas fa-search search-icon"></i>
+        </button>
     </form>
 </div>
