--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -3,7 +3,7 @@
         <div class="search-input-container">
             <input type="text" class="search-input" [(ngModel)]="searchText" name="searchInput"
                 (input)="onInputChange()" />
-            <div class="loader" [class.hidden]="searchText.length > 0">
+            <div class="loader" [class.hidden]="searchText && searchText.length > 0">
                 <span class="loader-text">Buscar...</span>
             </div>
         </div>
