--- a/src/app/pages/info-service/info-service.component.html
+++ b/src/app/pages/info-service/info-service.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="imagescontainer">
             <div class="leftimage">
-                <img src="assets/living1.png" alt="placeholder" class="imgplace" />
+                <img [src]="photo || 'assets/no-content.jpg'" alt="placeholder" class="imgplace h-96 object-cover" />
             </div>
             <div class="rightimage">
                 <!-- <app-weather></app-weather> -->
